--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -93,10 +93,10 @@ header {
         }
         form button.add-to-cart {
             margin: 15px;
+            padding: 10px 20px;
             background-color: $primary-accent;
             color: $baby-powder;
             border: 1px solid $lining;
-            padding: 10px 20px;
             border-radius: 5px;
             width: 170px;
         }
@@ -106,16 +106,20 @@ header {
 ul.edit-quantity {
     display: flex;
     padding-left: 0;
+    margin: 15 auto;
+
+    // margin: 15px;
+    // padding: 10px 20px;
+
     justify-content: space-between;
     list-style: none;
     text-align: center;
     width: 170px;
     // border: 1px solid #000;
-    margin: 0 auto;
-    // display: none;
+    display: none;
     #quantity {
         width: 35px;
-        height: 100%;
+        height: 40px;
         border-radius: 5px;
         text-align: center;
     }
