hide and display buttons works functionally but not prettily (more so)

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -106,7 +106,7 @@ header {
 ul.edit-quantity {
     display: flex;
     padding-left: 0;
-    margin: 15 auto;
+    margin: 15px auto;
 
     // margin: 15px;
     // padding: 10px 20px;
