--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -9,14 +9,13 @@ h1 {
     font-family: $title-font;
 }
 h2 {
-    margin-top: 0;
     padding: 10px;
     font-family: $text-font;
 }
 
 .wrapper {
     width: 95%;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -37,21 +36,30 @@ header {
         justify-content: space-between;
         background-color: $rich-black-fogra-29;
         color: white;
-        padding: 15px;
+        padding: 15px 0;
         .logo {
             display: grid;
             place-items: center;
             grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+            margin-left: -12px;
             img {
                 height: 48px;
             }
         }
-        .cart-box .fa-shopping-cart {
-                margin-right: 15px;
+        .cart-box {
+            text-align: right;
+            line-height: 175%;
+            .fa-shopping-cart {
+                margin-right: 7px;
             }
+            .current-cart-total-cost {
+                margin-left: 7px;
+            }
+        }
         .invent-display ul {
             display: flex;
             align-items: center;
+            padding: 0 5px;
             list-style: none;
             li {
                 padding: 0 10px;
@@ -74,8 +82,12 @@ header {
     height: 100vh;
     overflow: hidden;
     text-align: center;
+    h2 {
+        margin-top: 0;
+    }
     ul.item-display {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-evenly;
         list-style: none;
         text-align: center;
@@ -84,15 +96,18 @@ header {
         p {
             margin: 0;
         }
+        // li {
+        // }
         li .item-desc {
             padding: 10px;
         }
         li img {
             height: 220px;
+            // max-height: 8vh;
             box-shadow: 6px 6px $primary-accent;
         }
         form button.add-to-cart {
-            margin: 15px;
+            margin: 15px 0;
             padding: 10px 20px;
             background-color: $primary-accent;
             color: $baby-powder;
@@ -176,11 +191,17 @@ select {
             }
         }
         button.edit-order {
-            margin: 15px 4px;
+            margin: 15px 8px;
             background-color: $tertiary-accent;
             border: 1px solid $lining;
             padding: 10px 20px;
             border-radius: 5px;
+        }
+        .order-info figure {
+            border: 3px dashed $very-light-gray;
+            // box-shadow: 1px 1px 1px $rich-black-fogra-29;
+            padding: 20px;
+            margin: 0 0 16px 0;
         }
         .order-info button.address, 
         .order-info button.credit {
@@ -189,6 +210,9 @@ select {
             border: 1px solid $lining;
             padding: 1px 7px;
             border-radius: 5px;
+        }
+        .order-info button.confirm-order {
+            margin-left: 37px;
         }
     }
 }
