--- a/styles/style.css
+++ b/styles/style.css
@@ -247,14 +247,13 @@ h1 {
 }
 
 h2 {
-  margin-top: 0;
   padding: 10px;
   font-family: "Roboto", sans-serif;
 }
 
 .wrapper {
   width: 95%;
-  max-width: 1200px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
@@ -279,7 +278,7 @@ header nav {
           justify-content: space-between;
   background-color: #011627;
   color: white;
-  padding: 15px;
+  padding: 15px 0;
 }
 
 header nav .logo {
@@ -288,14 +287,24 @@ header nav .logo {
   place-items: center;
   -ms-grid-columns: (minmax(50px, 1fr))[auto-fill];
       grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+  margin-left: -12px;
 }
 
 header nav .logo img {
   height: 48px;
 }
 
+header nav .cart-box {
+  text-align: right;
+  line-height: 175%;
+}
+
 header nav .cart-box .fa-shopping-cart {
-  margin-right: 15px;
+  margin-right: 7px;
+}
+
+header nav .cart-box .current-cart-total-cost {
+  margin-left: 7px;
 }
 
 header nav .invent-display ul {
@@ -305,6 +314,7 @@ header nav .invent-display ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 0 5px;
   list-style: none;
 }
 
@@ -327,10 +337,16 @@ header nav .invent-display ul li .supply {
   text-align: center;
 }
 
+.store h2 {
+  margin-top: 0;
+}
+
 .store ul.item-display {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
@@ -355,7 +371,7 @@ header nav .invent-display ul li .supply {
 }
 
 .store ul.item-display form button.add-to-cart {
-  margin: 15px;
+  margin: 15px 0;
   padding: 10px 20px;
   background-color: #e71d36;
   color: #fdfffc;
@@ -435,11 +451,17 @@ select {
 }
 
 .checkout .checkout-box button.edit-order {
-  margin: 15px 4px;
+  margin: 15px 8px;
   background-color: #2ec4b6;
   border: 1px solid #adabab;
   padding: 10px 20px;
   border-radius: 5px;
+}
+
+.checkout .checkout-box .order-info figure {
+  border: 3px dashed #e0dfdf;
+  padding: 20px;
+  margin: 0 0 16px 0;
 }
 
 .checkout .checkout-box .order-info button.address,
@@ -449,4 +471,8 @@ select {
   border: 1px solid #adabab;
   padding: 1px 7px;
   border-radius: 5px;
+}
+
+.checkout .checkout-box .order-info button.confirm-order {
+  margin-left: 37px;
 }
