--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -68,6 +68,7 @@ header {
             padding: 0 5px;
             list-style: none;
             li {
+                text-align: center;
                 padding: 0 10px;
                 img {
                     height: 14px;
